--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
    <link rel="stylesheet" href="./css/style.css">
 
-   <title>Municipalidad de Lago Puelo</title>
+   <title>Municipalidad </title>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
