--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
    <link rel="stylesheet" href="./css/style.css">
 
-   <title>Municipalidad </title>
+   <title>Municipalidad</title>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -40,7 +40,7 @@
    </nav>
    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
       <div class="container">
-         <a class="navbar-brand" href="#">Municipalidad <br>de Lago Puelo</a>
+         <a class="navbar-brand" href="#">Municipalidad</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
