footer - barra datos

--- a/index.html
+++ b/index.html
@@ -191,17 +191,41 @@
       </div>
    </section>
 
+   <!-- BAARRA CON DATOS -->
+   <section id="barra">
+      <div class="container">
+         <div class="row text-center justify-content-center gy-4">
+            <div class="col-lg-2 col-sm-6">
+               <h1 class="display-4">100+</h1>
+               <p class="mb-0">Obra finalizadas</p>
+            </div>
+            <div class="col-lg-2 col-sm-6">
+               <h1 class="display-4">45+</h1>
+               <p class="mb-0">Millones de pesos invertidos</p>
+            </div>
+            <div class="col-lg-2 col-sm-6">
+               <h1 class="display-4">220+</h1>
+               <p class="mb-0">Km De Asfalto</p>
+            </div>
+            <div class="col-lg-2 col-sm-6">
+               <h1 class="display-4">380+</h1>
+               <p class="mb-0">Km De Veredas</p>
+            </div>
+         </div>
+      </div>
+   </section>
+
    <!-- REDES SOCIALES -->
    <section id="redes">
-      <div class="container-fluid">
-         <div class="row align-items-center">
+      <div class="container">
+         <div class="row justify-content-center">
             <div class="text-center">
                <h1 class="mb-25">SEGUINOS </h1>
                <p class="text-uppercase"><span>y enterate de todas la novedades</span></p>
                <br>
             </div>
 
-            <div class="col-md-4 ms-20">
+            <div class="col-lg-5 py-5">
                <div class="row">
                   <div class="col-12">
                      <div class="info-box">
@@ -235,7 +259,7 @@
                   </div>
                </div>
             </div>
-            <div class="col-md-4 offset-md-4">
+            <div class="col-lg-5">
                <div class="fb-page" data-href="https://www.facebook.com/munipuelo" data-tabs="timeline" data-width=""
                   data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false"
                   data-show-facepile="true">
@@ -246,6 +270,32 @@
          </div>
       </div>
    </section>
+
+
+   <!-- FOOTER -->
+   <footer>
+      <div class="footer-top text-center">
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-lg-6 text-center">
+                  <h4 class="navbar-brand">Municipalidad<span class="dot">.</span></h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt velit iusto a repellendus maxime
+                     doloribus totam porro ab eligendi aspernatur.</p>
+                  <div class="col-auto social-icons">
+                     <a href="#"><i class='bx bxl-facebook'></i></a>
+                     <a href="#"><i class='bx bxl-twitter'></i></a>
+                     <a href="#"><i class='bx bxl-instagram'></i></a>
+                     <a href="#"><i class='bx bxl-pinterest'></i></a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="footer-bottom text-center">
+         <p class="mb-0">Copyright@2022. Todos los derechos reservados</p>
+      </div>
+   </footer>
+
 
    <script src="./js/jquery.min.js"></script>
    <script src="./js/bootstrap.bundle.min.js"></script>
