--- a/index.html
+++ b/index.html
@@ -18,21 +18,13 @@
    <!--  NAVBAR -->
    <nav class="top-nav" id="home">
       <div class="containter">
-         <div class="row justify-content-between">
-            <div class="col-auto">
-               <p>
-                  <span>Seguinos en nuestras redes</span>
-                  <i class='bx bx-right-arrow-alt'></i>
-               </p>
-            </div>
+         <div class="row justify-content-center">
             <div class="col-auto">
                <div class="social-icons">
                   <a href=""><i class='bx bxl-facebook-circle'></i></a>
                   <a href=""><i class='bx bxl-instagram-alt'></i></a>
                   <a href=""><i class='bx bxl-twitter'></i></a>
                   <a href=""><i class='bx bxl-youtube'></i></a>
-
-
                </div>
             </div>
          </div>
@@ -60,8 +52,21 @@
                   <a class="nav-link active ms-lg-2" aria-current="page" href="#">App</a>
                </li>
 
-               <a class="btn btn-brand1 ms-lg-3" aria-current="page" href="#"><i class='bx bx-power-off'></i></a>
-
+               <!-- Example single danger button -->
+               <div class="btn-group">
+                  <a class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                     <i class="bi bi-person-circle"></i>
+                  </a>
+                  <ul class="dropdown-menu">
+                     <li><a class="dropdown-item" href="#">Action</a></li>
+                     <li><a class="dropdown-item" href="#">Another action</a></li>
+                     <li><a class="dropdown-item" href="#">Something else here</a></li>
+                     <li>
+                        <hr class="dropdown-divider">
+                     </li>
+                     <li><a class="dropdown-item" href="#">Separated link</a></li>
+                  </ul>
+               </div>
             </ul>
          </div>
       </div>
@@ -123,6 +128,7 @@
                <div class="intro">
                   <h1>SERVICIOS</h1>
                   <h6 class="text-uppercase"> Online</h6>
+                  <br>
                </div>
             </div>
          </div>
@@ -130,7 +136,7 @@
             <div class="col-lg-4 col-md-6">
                <div class="servicio">
                   <a href="#">
-                     <img src="img/icon6.png" alt="">
+                     <img src="img/day78-wallet.png" alt="">
                      <h5>Rentas Automotor</h5>
                      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                         classical Latin literature from</p>
@@ -140,7 +146,7 @@
             <div class="col-lg-4 col-md-6">
                <div class="servicio">
                   <a href="#">
-                     <img src="img/icon5.png" alt="">
+                     <img src="img/day31-sweet-home.png" alt="">
                      <h5>Rentas Inmueble</h5>
                      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                         classical Latin literature from</p>
@@ -150,7 +156,7 @@
             <div class="col-lg-4 col-md-6">
                <div class="servicio">
                   <a href="#">
-                     <img src="img/icon4.png" alt="">
+                     <img src="img/day54-building.png" alt="">
                      <h5>Licitaciones</h5>
                      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                         classical Latin literature from</p>
@@ -160,8 +166,8 @@
             <div class="col-lg-4 col-md-6">
                <div class="servicio">
                   <a href="#">
-                     <img src="img/icon1.png" alt="">
-                     <h5>Pagos</h5>
+                     <img src="img/day30-cafe.png" alt="">
+                     <h5>Comercio</h5>
                      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                         classical Latin literature from</p>
                   </a>
@@ -170,7 +176,7 @@
             <div class="col-lg-4 col-md-6">
                <div class="servicio">
                   <a href="#">
-                     <img src="img/icon2.png" alt="">
+                     <img src="img/day52-auntum.png" alt="">
                      <h5>Servicios Publicos</h5>
                      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                         classical Latin literature from</p>
@@ -180,7 +186,7 @@
             <div class="col-lg-4 col-md-6">
                <div class="servicio">
                   <a href="#">
-                     <img src="img/icon3.png" alt="">
+                     <img src="img/day42-imac.png" alt="">
                      <h5>Otros</h5>
                      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                         classical Latin literature from</p>
