--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
    <script src="./js/jquery.min.js"></script>
    <script src="./js/bootstrap.bundle.min.js"></script>
    <script src="./js/owl.carousel.min.js"></script>
+   <script src="//code.tidio.co/ozeapspe7bti3l1gpv8uz0mpxzqo7jih.js" async></script>
    <script src="./js/app.js"></script>
    <div id="fb-root"></div>
    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v13.0"
