--- a/index.html
+++ b/index.html
@@ -46,27 +46,12 @@
                   <a class="nav-link active ms-lg-2" aria-current="page" href="#servicios">Servicios</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link active ms-lg-2" aria-current="page" href="#faqs">FAQs</a>
+                  <a class="nav-link active ms-lg-2" aria-current="page" href="#autoridades">Autoridades</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link active ms-lg-2" aria-current="page" href="#">App</a>
+                  <a class="nav-link active ms-lg-2" aria-current="page" href="#app">App</a>
                </li>
 
-               <!-- Example single danger button -->
-               <div class="btn-group">
-                  <a class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                     <i class="bi bi-person-circle"></i>
-                  </a>
-                  <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="#">Action</a></li>
-                     <li><a class="dropdown-item" href="#">Another action</a></li>
-                     <li><a class="dropdown-item" href="#">Something else here</a></li>
-                     <li>
-                        <hr class="dropdown-divider">
-                     </li>
-                     <li><a class="dropdown-item" href="#">Separated link</a></li>
-                  </ul>
-               </div>
             </ul>
          </div>
       </div>
@@ -226,7 +211,7 @@
       <div class="container">
          <div class="row justify-content-center">
             <div class="text-center">
-               <h1 class="mb-25">SEGUINOS </h1>
+               <h1 class="mb-25 intro">SEGUINOS </h1>
                <p class="text-uppercase"><span>y enterate de todas la novedades</span></p>
                <br>
             </div>
@@ -235,9 +220,10 @@
                <div class="row">
                   <div class="col-12">
                      <div class="info-box">
-                        <img src="img/icon6.png" alt="">
+
+                        <a href=""><img src="img/produccion.png" alt=""></a>
                         <div class="ms-4">
-                           <h5>Digital Marketing</h5>
+                           <h5>Produccion</h5>
                            <p>It is a long established fact that a reader will be distracted by the readable
                               content of a page </p>
                         </div>
@@ -245,9 +231,10 @@
                   </div>
                   <div class="col-12 mt-4">
                      <div class="info-box">
-                        <img src="img/icon4.png" alt="">
+
+                        <a href=""><img src="img/cultura-icon.png" alt=""> </a>
                         <div class="ms-4">
-                           <h5>E-mail Marketing</h5>
+                           <h5>Cultura</h5>
                            <p>It is a long established fact that a reader will be distracted by the readable
                               content of a page </p>
                         </div>
@@ -255,9 +242,12 @@
                   </div>
                   <div class="col-12 mt-4">
                      <div class="info-box">
-                        <img src="img/icon5.png" alt="">
+                        <a href="">
+                           <img src="img/deportes-icon.png" alt="">
+                        </a>
+
                         <div class="ms-4">
-                           <h5>Buisness Marketing</h5>
+                           <h5>Deportes</h5>
                            <p>It is a long established fact that a reader will be distracted by the readable
                               content of a page </p>
                         </div>
@@ -266,7 +256,7 @@
                </div>
             </div>
             <div class="col-lg-5">
-               <div class="fb-page" data-href="https://www.facebook.com/munipuelo" data-tabs="timeline" data-width=""
+               <div class="fb-page " data-href="https://www.facebook.com/munipuelo" data-tabs="timeline" data-width=""
                   data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false"
                   data-show-facepile="true">
                   <blockquote cite="https://www.facebook.com/munipuelo" class="fb-xfbml-parse-ignore"><a
@@ -278,20 +268,153 @@
    </section>
 
 
+   <!-- AUTORIDADES -->
+
+   <section id="autoridades">
+      <div class="container">
+         <div class="row">
+            <div class="col-12">
+               <div class="intro">
+                  <h6 class="text-uppercase">MUNICIPALIDAD DE LAGO PUELO</h6>
+                  <h1 class="text-uppercase">autoridades</h1>
+                  <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                     roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
+               </div>
+            </div>
+         </div>
+         <div class="row justify-content-center">
+            <div class="col-lg-4 col-md-8">
+               <div class="autoridades-member">
+                  <div class="image">
+                     <img src="img/team_1.jpg" alt="">
+                     <div class="social-icons">
+                        <a href="#"><i class='bx bxl-facebook'></i></a>
+                        <a href="#"><i class='bx bxl-twitter'></i></a>
+                        <a href="#"><i class='bx bxl-instagram'></i></a>
+                     </div>
+                     <div class="overlay"></div>
+                  </div>
+
+                  <h5>Andres</h5>
+                  <p>Secretario de Gobierno</p>
+               </div>
+            </div>
+            <div class="col-lg-4 col-md-8">
+               <div class="autoridades-member">
+                  <div class="image">
+                     <img src="img/team_2.jpg" alt="">
+                     <div class="social-icons">
+                        <a href="#"><i class='bx bxl-facebook'></i></a>
+                        <a href="#"><i class='bx bxl-twitter'></i></a>
+                        <a href="#"><i class='bx bxl-instagram'></i></a>
+                     </div>
+                     <div class="overlay"></div>
+                  </div>
+
+                  <h5>Augusto</h5>
+                  <p>Intendente</p>
+               </div>
+            </div>
+            <div class="col-lg-4 col-md-8">
+               <div class="autoridades-member">
+                  <div class="image">
+                     <img src="img/team_3.jpg" alt="">
+                     <div class="social-icons">
+                        <a href="#"><i class='bx bxl-facebook'></i></a>
+                        <a href="#"><i class='bx bxl-twitter'></i></a>
+                        <a href="#"><i class='bx bxl-instagram'></i></a>
+                     </div>
+                     <div class="overlay"></div>
+                  </div>
+
+                  <h5>Andres</h5>
+                  <p>Secretario de Economia</p>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <!-- APP -->
+
+   <section class="download-area pt-70 pb-40" id="app">
+      <div class="container">
+         <div class="row justify-content-center align-items-center">
+            <div class="col-lg-6 col-md-9">
+               <div class="download-image">
+                  <div class="download-shape-1"></div>
+                  <img src="./img/download-app.png" alt="" class="image-3">
+               </div>
+            </div>
+            <div class="col-lg-6">
+               <div class="download-content mt-45">
+                  <h1 class="title text-center">Descarga nuestra app!</h1>
+                  <p class="text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam eligendi
+                     voluptatem
+                     quae
+                     deserunt laudantium qui nisi? Cum voluptatibus quidem officiis nam placeat unde eaque totam!</p>
+                  <ul>
+                     <li><a href="" class="app-store">
+                           <img src="./img/app-store.png" alt="">
+                        </a></li>
+                     <li><a href="" class="play-store">
+                           <img src="./img/play-store.png" alt="">
+                        </a></li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+
    <!-- FOOTER -->
    <footer>
       <div class="footer-top text-center">
-         <div class="container">
+         <div class="container mb-5 text-uppercase">
             <div class="row justify-content-center">
                <div class="col-lg-6 text-center">
-                  <h4 class="navbar-brand">Municipalidad<span class="dot">.</span></h4>
+                  <h4 class="navbar-brand">Municipalidad de Lago Puelo</h4>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt velit iusto a repellendus maxime
                      doloribus totam porro ab eligendi aspernatur.</p>
                   <div class="col-auto social-icons">
                      <a href="#"><i class='bx bxl-facebook'></i></a>
                      <a href="#"><i class='bx bxl-twitter'></i></a>
                      <a href="#"><i class='bx bxl-instagram'></i></a>
-                     <a href="#"><i class='bx bxl-pinterest'></i></a>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="container">
+            <div class="row justify-content-center">
+               <div class="col-lg-4 text-center">
+                  <h4 class="navbar-brand">CULTURA</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt velit iusto a repellendus maxime
+                     doloribus totam porro ab eligendi aspernatur.</p>
+                  <div class="col-auto social-icons">
+                     <a href="#"><i class='bx bxl-facebook'></i></a>
+                     <a href="#"><i class='bx bxl-twitter'></i></a>
+                     <a href="#"><i class='bx bxl-instagram'></i></a>
+                  </div>
+               </div>
+               <div class="col-lg-4 text-center">
+                  <h4 class="navbar-brand">DESARROLLO</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt velit iusto a repellendus maxime
+                     doloribus totam porro ab eligendi aspernatur.</p>
+                  <div class="col-auto social-icons">
+                     <a href="#"><i class='bx bxl-facebook'></i></a>
+                     <a href="#"><i class='bx bxl-twitter'></i></a>
+                     <a href="#"><i class='bx bxl-instagram'></i></a>
+                  </div>
+               </div>
+               <div class="col-lg-4 text-center">
+                  <h4 class="navbar-brand">OBRAS PUBLICAS</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt velit iusto a repellendus maxime
+                     doloribus totam porro ab eligendi aspernatur.</p>
+                  <div class="col-auto social-icons">
+                     <a href="#"><i class='bx bxl-facebook'></i></a>
+                     <a href="#"><i class='bx bxl-twitter'></i></a>
+                     <a href="#"><i class='bx bxl-instagram'></i></a>
                   </div>
                </div>
             </div>
